--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" ="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+    <title>hello</title>
 </head>
 <body>
+    <h1>yaboipancake</h1>
+    <h2>manofsteel</h2>
+    <h3>xbox</h3>
+    <h4>subnatica</h4>
     <img src="thephoto.jpg" alt="">
     <h1>thomas</h1>
+    <link rel="https://yaboipancake.github.io/practice/" href="">
 </body>
 </html>
