--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <h1>yaboipancake</h1>
+    <p>undercards</p>
     <h2>manofsteel</h2>
+    <p>roblox</p>
     <h3>xbox</h3>
+    <p>consle</p>
     <h4>subnatica</h4>
     <img src="thephoto.jpg" alt="">
     <h1>thomas</h1>
